unpackaged/main/default/objects/Patient_Contract__c/Patient_Contract__c.object-meta.xml
<CustomObject>
    <label>Patient Contract</label>
    <nameField>
        <displayFormat>PTC-{000000}</displayFormat>
        <label>Patient Contract</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>