unpackaged/main/default/objects/Patient_Contract__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <description>Choose &#39;Send Now&#39; to send the contract to the Patient</description>
    <inlineHelpText>Choose &#39;Send Now&#39; to send the contract to the Patient</inlineHelpText>
    <label>Contract Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send Now</fullName>
            </value>
            <value>
                <fullName>Manual Send</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Rejected by Patient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>