unpackaged/main/default/objects/Patient_Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>Select the contract you want the Patient to sign</description>
    <inlineHelpText>Select the contract you want the Patient to sign</inlineHelpText>
    <label>Contract Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient Agreement</fullName>
            </value>
            <value>
                <fullName>Medication Adherence Waiver</fullName>
            </value>
            <value>
                <fullName>Male Pattern Baldness Consent</fullName>
            </value>
            <value>
                <fullName>Third Party Information Consent</fullName>
                <label>Third Party Information Consent (Manual)</label>
            </value>
            <value>
                <fullName>HCG PIL &amp; Consent</fullName>
            </value>
            <value>
                <fullName>Metformin PIL &amp; Consent</fullName>
            </value>
            <value>
                <fullName>Prostate Exam Waiver</fullName>
            </value>
            <value>
                <fullName>Exemestane PIL &amp; Consent</fullName>
            </value>
            <value>
                <fullName>Medical Advice Adherence Waiver - Cryopreservation</fullName>
            </value>
            <value>
                <fullName>Polycythaemia Risk Waiver</fullName>
            </value>
            <value>
                <fullName>Covid-19 Patient Screen</fullName>
            </value>
            <value>
                <fullName>Anastrozole PIL &amp; Consent</fullName>
            </value>
            <value>
                <fullName>Finasteride &amp; Minoxidil Foam PIL &amp; Consent</fullName>
            </value>
            <value>
                <fullName>Finasteride, Azelaic Acid &amp; Minoxidil PIL &amp; Consent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>