unpackaged/main/default/objects/Patient_Contract__c/fields/Sent_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Email__c</fullName>
    <label>Sent to Email</label>
    <type>Email</type>
</CustomField>